--- a/exercises/Module 2/perspective-origin.html
+++ b/exercises/Module 2/perspective-origin.html
@@ -9,8 +9,8 @@
     margin: 50px;
     padding: 10px;
     border: 1px solid black;
-    perspective: 150px;
-    perspective-origin: 50% 50%;
+    perspective: 500px;
+    perspective-origin: bottom left;
 }
 
 #div2 {
@@ -18,7 +18,7 @@
     position: absolute;
     border: 1px solid black;
     background-color: red;
-    transform: rotateX(45deg);
+    transform: rotateY(45deg);
 }
 
 </style>
