--- a/exercises/Module 2/perspective.html
+++ b/exercises/Module 2/perspective.html
@@ -4,12 +4,13 @@
 <style>
 #div1 {
     position: relative;
-    height: 150px;
-    width: 150px;
+    height: 200px;
+    width: 200px;
     margin: 50px;
     padding: 10px;
-    border: 1px solid black;
-    perspective: 150px;
+    /*border: 1px solid black;*/
+    perspective: 300px;
+    perspective-origin: bottom left;
 }
 
 #div2 {
@@ -18,13 +19,30 @@
     border: 1px solid black;
     background-color: red;
     transform: rotateX(45deg);
+    /*transform: translate3d(100px,100px,0px);*/
 }
+#div2:active {
+    padding: 50px;
+    position: absolute;
+    border: 1px solid black;
+    background-color: red;
+   /* transform: rotateX(45deg);*/
+    /*transform: translate3d(100px,100px,150px);*/
+    /*transform: rotateX(45deg) scaleZ(5);*/
+    /*transform: rotateX(45deg) scale3d(2,2,1);*/
+}
+
 </style>
 </head>
 <body>
 
-<div id="div1">
+<!-- <div id="div1">
   <div id="div2">HELLO</div>
+</div> -->
+<div id="div1">
+  <div id="div2">
+      <img src="mbs.jpg">
+  </div>
 </div>
  
 </body>
