--- a/exercises/index.html
+++ b/exercises/index.html
@@ -4,22 +4,30 @@
 <meta charset="UTF-8">
 <title>Basic Transition</title>
 <style type="text/css">
-a {
-	background: orange;
-	padding: 5px 10px;
-	font-size: 24px;
-	color: #fff;
-	text-decoration: none;
-	transition-property: background;
-	transition-duration: 1s;
+div {
+	width: 300px;
+    height: 100px;
+    background-color: yellow;
 }
-a:hover {
-	background: blue;
+/*div:active {
+	transform: translate(100px,300px);
+}*/
+p:nth-child(3) {
+	padding: 20px;
+	color: red;
+}
+p:nth-child(4) {
+	padding: 20px;
+	color: green;
 }
 </style>
 </head>
 
 <body>
-<a href="#">Home Page</a>
+<div>
+<svg>
+<rect x="4.583" y="5" fill="#72CC58" width="198.879" height="56"/>
+</svg>
+</div>
 </body>
 </html>
